fix FR and RU header wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,7 @@ textarea {
 }
 .main-navigation .navbar-default .navbar-nav > li > a {
 	color: #fff;
-	padding: 10px 8px;
+	padding: 10px 7px;
 	font-size: 18px;
 	font-weight: 300;
 }
